# CatArena

./: .gitignore  .gitmodules  CLAUDE.md  ROADMAP.md  pyproject.toml
catarena/: __init__.py  registry.py  run.py  verify_seam.py
catarena/envs/: __init__.py  beacon_env.py
scripts/: catarena.sh
