[project]
name = "catarena"
version = "0.0.0"
description = "Multi-user agent arena on top of GOD (extend, don't rewrite)"
requires-python = ">=3.11"
# agentsociety2 is provided by the GOD submodule. For M0 it is supplied via
# GOD's own venv + PYTHONPATH (see scripts/catarena.sh). A later milestone can
# promote this to an explicit editable path dependency:
#   [tool.uv.sources] agentsociety2 = { path = "GOD/agentsociety/packages/agentsociety2", editable = true }
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["catarena"]
